package sparks.dataflow.protocols.processmodel

case class Execution(process: Process, runToActivity: Int)