package sparks.dataflow.protocols.processmodel

case class Transition(fromPort: Int, toPort: Int)